CloudFormation/cloudFormation-Projects/other/first-project.yml
Parameters:
  NameOfService:
    Description: "The name of the service this stack is to be used for"
    Type: String
  InstanceTypeParameter:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.large
    Description: Enter t2.micro, t2.small, or t2.large. Default is t2.micro.
  InstanceKeyParameter:
    Description: Name of all EC2 login keys in my account
    Type: AWS::EC2::KeyPair::KeyName

Mappings: 
  RegionMap: 
    us-east-1:
      "AMI": "ami-0440d3b780d96b29d"
    us-east-2: 
      "AMI": "ami-0c20d88b0021158c6"

Resources:
  DEMOInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceTypeParameter
      KeyName: !Ref InstanceKeyParameter # Get the key namme from the parameter
      ImageId: !FindInMap
        - RegionMap
        - !Ref AWS::Region
        - AMI
      SecurityGroups:
        - !Ref DEMOInstanceSG
      Tags:
        - Key: "Name"
          Value: !Ref NameOfService

  DEMOInstanceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http and ssh to client host
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
       - Key: "Name"
         Value: !Join [" ", ["DEMO-InstanceSG", "in", !Ref AWS::Region] ]

Outputs:
  PrintSomeInfo:
    Value: !GetAtt
      - DEMOInstance
      - PublicDnsName
    Export:
      Name: DEMO-DNS-NAME
